--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
         <!-- barra di download -->
         <div class="down_flex_container">
-
             <div class="pink_box"></div>
-
         </div>
 
     </header>
@@ -65,9 +63,21 @@
     </main>
     <!-- END: main -->
 
+    <!-- START: footer -->
     <footer>
 
+        <div class="foot_box">
+            <div class="foot_sub_box"></div>
+            <div class="foot_sub_box"></div>
+            <div class="foot_sub_box"></div>
+            <div class="foot_sub_box"></div>
+            <div class="foot_sub_box"></div>
+        </div>
+
+        <div class="sub_foot_box"></div>
+
     </footer>
+    <!-- END: footer -->
 
 </body>
 </html>
