--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 
         <!-- barra di navigazione -->
         <nav class="nav_flex_container">
-            <p class="card_l">logo</p>
-            <p class="card_c">link link link link link</p>
-            <p class="card_r">login</p>
+            <div class="card_l"> <img src="" alt="logo" > </div>
+            <ul class="card_c">
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+            </ul>
+            <a href="#" class="card_r">login</a>
         </nav>
-
+        
         <!-- barra di download -->
         <div class="down_flex_container">
             <div class="pink_box"></div>
@@ -65,7 +70,7 @@
 
     <!-- START: footer -->
     <footer>
-
+        
         <div class="foot_box">
             <div class="foot_sub_box"></div>
             <div class="foot_sub_box"></div>
